--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -50,10 +50,10 @@
                         <a href="#about">About</a>
                     </li>
                     <li>
-                        <a href="#services">Services</a>
+                        <a href="/users/sign_up">Sign Up</a>
                     </li>
                     <li>
-                        <a href="#contact">Contact</a>
+                        <a href="/users/sign_in">Sign In</a>
                     </li>
                 </ul>
             </div>
