--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -49,12 +49,21 @@
                     <li>
                         <a href="#about">About</a>
                     </li>
+                    <% if user_signed_in? %>
+                    <li>
+                        <a href="/users/edit">My Account</a>
+                    </li>
+                    <li>
+                        <a href="/users/sign_out" data-method="delete">Log Out</a>
+                    </li>
+                    <% else %>
                     <li>
                         <a href="/users/sign_up">Sign Up</a>
                     </li>
                     <li>
-                        <a href="/users/sign_in">Sign In</a>
+                        <a href="/users/sign_int">Sign In</a>
                     </li>
+                    <% end %>
                 </ul>
             </div>
             <!-- /.navbar-collapse -->
