--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,12 @@
     <%= f.email_field :email, autofocus: true %>
   </div>
 
+ 
+  
+   <div class="field">
+    <%= f.label :image %><br />
+    <%= f.file_field :avatar, autofocus: true %>
+  </div
   <div class="field">
     <%= f.label :password %>
     <% if @minimum_password_length %>
