--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -61,7 +61,7 @@
                         <a href="/users/sign_up">Sign Up</a>
                     </li>
                     <li>
-                        <a href="/users/sign_int">Sign In</a>
+                        <a href="/users/sign_in">Sign In</a>
                     </li>
                     <% end %>
                 </ul>
